horizontal scroll fix

--- a/src/styles/components/slide_0_welcome/welcomeSlide.scss
+++ b/src/styles/components/slide_0_welcome/welcomeSlide.scss
@@ -1,4 +1,5 @@
 .welcome-slide {
+  position       : relative;
   display        : flex;
   justify-content: space-evenly;
   display        : -webkit-flex;
